# esp32_midi_over_ble

./: .gitignore  Pipfile  README.md  README.rst  app.py  esp32-accelerometer-over-ble-serial.ino  pyproject.toml
esp32_midi_over_ble/: app.py  esp32-accelerometer-over-ble.ino
